k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mentalo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - staging.ateliers-mentalo.ch
      secretName: mentalo-staging-tls
  rules:
    - host: staging.ateliers-mentalo.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentalo
                port:
                  number: 3000
